# tachyon

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
config/: default.toml
crates/tachyon-bench/: Cargo.toml
crates/tachyon-bench/benches/: matching.rs  orderbook.rs  spsc.rs  throughput.rs
crates/tachyon-bench/src/: lib.rs
crates/tachyon-book/: Cargo.toml
crates/tachyon-book/src/: book.rs  level.rs  lib.rs  pool.rs
crates/tachyon-core/: Cargo.toml
crates/tachyon-core/src/: config.rs  error.rs  event.rs  lib.rs  order.rs  price.rs  quantity.rs
crates/tachyon-engine/: Cargo.toml
crates/tachyon-engine/src/: command.rs  engine.rs  lib.rs  matcher.rs  risk.rs  stp.rs
crates/tachyon-gateway/: Cargo.toml
crates/tachyon-gateway/src/: auth.rs  bridge.rs  lib.rs  rate_limit.rs  rest.rs  tcp.rs  types.rs  ws.rs
crates/tachyon-io/: Cargo.toml
crates/tachyon-io/src/: lib.rs  mpsc.rs  spsc.rs
crates/tachyon-persist/: Cargo.toml
crates/tachyon-persist/src/: lib.rs  recovery.rs  snapshot.rs  trade_store.rs  wal.rs
crates/tachyon-proto/: Cargo.toml
crates/tachyon-proto/src/: codec.rs  error.rs  lib.rs  msg.rs
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  PRD.md  ROADMAP.md
docs/tutorial/: 01-architecture.md  02-core-types.md  03-orderbook.md  04-matching-engine.md  05-lock-free.md  06-performance.md  07-integration.md  08-persistence.md  09-interview.md  README.md
