[workspace]
members = [
    "crates/tachyon-core",
    "crates/tachyon-book",
    "crates/tachyon-engine",
    "crates/tachyon-io",
    "crates/tachyon-gateway",
    "crates/tachyon-persist",
    "crates/tachyon-bench",
    "bin/tachyon-server",
]
resolver = "2"

[workspace.dependencies]
# Core
slab = "0.4"
hashbrown = "0.14"
smallvec = { version = "1.13", features = ["const_generics", "union"] }
arrayvec = "0.7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

# Async / Networking (Gateway only, NOT on hot path)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "json"] }
serde_json = "1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
tonic = "0.12"
prost = "0.13"

# Persistence
rkyv = { version = "0.8" }
lz4_flex = "0.11"
crc32fast = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"

# Performance
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }
bumpalo = { version = "3", features = ["collections"] }
crossbeam-utils = "0.8"
core_affinity = "0.8"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

# Config
toml = "0.8"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
