[package]
name = "tachyon-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Benchmark suite and scenario simulation for Tachyon"

[dependencies]
tachyon-core = { path = "../tachyon-core" }
tachyon-book = { path = "../tachyon-book" }
tachyon-engine = { path = "../tachyon-engine" }
tachyon-io = { path = "../tachyon-io" }
criterion = { workspace = true }
arrayvec = { workspace = true }
rand = "0.8"

[[bench]]
name = "matching"
harness = false

[[bench]]
name = "orderbook"
harness = false

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "throughput"
harness = false
