[package]
name = "tachyon-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WAL and snapshot persistence for the Tachyon matching engine"

[dependencies]
tachyon-core = { path = "../tachyon-core" }
crc32fast = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = "1"

[dev-dependencies]
tempfile = "3"
tachyon-book = { path = "../tachyon-book" }
tachyon-engine = { path = "../tachyon-engine" }
